fix: add scrollbar when many filters on one row

--- a/components/GridToolBox/style.css
+++ b/components/GridToolBox/style.css
@@ -3,7 +3,7 @@
 
 .toolbarWrap {
     width: 100%;
-    overflow: hidden;
+    overflow-x: auto;
 }
 
 .fixedHeight {
